Fixed text spacing issue

--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ button{
     position: absolute;
     text-align: center;
     left: 34.6vw;
-    bottom: 15vw;
+    bottom: 12vw;
     width: 30%;
 }
 
